// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalViewToolbar @renders should emit compare when checkbox is checked: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "disabled" with v-bind value \`false\` will render disabled="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrField",
    "key=0",
    "class="mr-3"",
    "name="showLastPeriod"",
    " ...",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=true",
    "filters=",
    [],
    "isLoading=false",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`NormalViewToolbar @renders should render the component with the compare checkbox: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) v-model usage on component has changed in Vue 3. Component that expects to work with v-model should now use the "modelValue" prop and emit the "update:modelValue" event. You can update the usage and then opt-in to Vue 3 behavior on a per-component basis with \`compatConfig: { COMPONENT_V_MODEL: false }\`.
  Details: https://v3-migration.vuejs.org/breaking-changes/v-model.html",
    "
",
    " at <FrField",
    "key=0",
    "modelValue=false",
    "onUpdate:modelValue=fn",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (2)",
    "
",
    " at <FrField",
    "key=0",
    "class="mr-3"",
    "name="showLastPeriod"",
    " ...",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=true",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (3)",
    "
",
    " at <FrSwitch",
    "key=0",
    "name="showLastPeriod"",
    "size="sm"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "key=0",
    "class="mr-3"",
    "name="showLastPeriod"",
    " ...",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=true",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (4)",
    "
",
    " at <FrSwitch",
    "key=0",
    "name="showLastPeriod"",
    "size="sm"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "key=0",
    "class="mr-3"",
    "name="showLastPeriod"",
    " ...",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=true",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (2)",
    "
",
    " at <BFormCheckbox",
    "modelValue=""",
    "onUpdate:modelValue=fn",
    "onModelCompat:input=fn",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (3)",
    "
",
    " at <BFormCheckbox",
    "onModelCompat:input=fn",
    "onInput=fn<bound handleInput>",
    "class="d-inline-flex fr-toggle-primary"",
    " ...",
    ">",
    "
",
    " at <FrSwitch",
    "key=0",
    "name="showLastPeriod"",
    "size="sm"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "key=0",
    "class="mr-3"",
    "name="showLastPeriod"",
    " ...",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=true",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) vm.$scopedSlots has been removed. Use vm.$slots instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/slots-unification.html",
    "
",
    " at <BFormCheckbox",
    "onModelCompat:input=fn",
    "onInput=fn<bound handleInput>",
    "class="d-inline-flex fr-toggle-primary"",
    " ...",
    ">",
    "
",
    " at <FrSwitch",
    "key=0",
    "name="showLastPeriod"",
    "size="sm"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "key=0",
    "class="mr-3"",
    "name="showLastPeriod"",
    " ...",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=true",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BFormCheckbox> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BFormCheckbox",
    "onModelCompat:input=fn",
    "onInput=fn<bound handleInput>",
    "class="d-inline-flex fr-toggle-primary"",
    " ...",
    ">",
    "
",
    " at <FrSwitch",
    "key=0",
    "name="showLastPeriod"",
    "size="sm"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "key=0",
    "class="mr-3"",
    "name="showLastPeriod"",
    " ...",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=true",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "value" with v-bind value \`false\` will render value="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrField",
    "key=0",
    "class="mr-3"",
    "name="showLastPeriod"",
    " ...",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=true",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`NormalViewToolbar @renders should render the component: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=false",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) Functional component <BButton> should be defined as a plain function in Vue 3. The "functional" option has been removed. NOTE: Before migrating to use plain functions for functional components, first make sure that all async components usage have been migrated and its compat behavior has been disabled.
  Details: https://v3-migration.vuejs.org/breaking-changes/functional-components.html",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=false",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) vm.$listeners has been removed. In Vue 3, parent v-on listeners are included in vm.$attrs and it is no longer necessary to separately use v-on="$listeners" if you are already using v-bind="$attrs". (Note: the Vue 3 behavior only applies if this compat config is disabled)
  Details: https://v3-migration.vuejs.org/breaking-changes/listeners-removed.html",
    "
",
    " at <BButton",
    "class="w-md-auto w-100"",
    "pill=""",
    "variant="outline-primary"",
    " ...",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=false",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (2)",
    "
",
    " at <FilterFeaturesModal",
    "filters=",
    [],
    "onUpdate=fn<updateSelectedFeatures>",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=false",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (3)",
    "
",
    " at <FilterFeaturesModal",
    "filters=",
    [],
    "onUpdate=fn<updateSelectedFeatures>",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=false",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (2)",
    "
",
    " at <BModal",
    "ref="modal"",
    "id="FilterFeaturesModal"",
    "ok-disabled=true",
    " ...",
    ">",
    "
",
    " at <FilterFeaturesModal",
    "filters=",
    [],
    "onUpdate=fn<updateSelectedFeatures>",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=false",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) \`beforeDestroy\` has been renamed to \`beforeUnmount\`.",
    "
",
    " at <BModal",
    "ref="modal"",
    "id="FilterFeaturesModal"",
    "ok-disabled=true",
    " ...",
    ">",
    "
",
    " at <FilterFeaturesModal",
    "filters=",
    [],
    "onUpdate=fn<updateSelectedFeatures>",
    ">",
    "
",
    " at <NormalViewToolbar",
    "hasCompare=false",
    "filters=",
    [],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) vm.$on/$once/$off() have been removed. Use an external event emitter library instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/events-api.html",
  ],
]
`;
